Return to jiraUrl